css/style.css
/*define the widths of divs*/
.container {
  margin: auto auto auto auto;
}

.row {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
}

.col-1 {
  width: 8.33%;
}

.col-2 {
  width: 16.66%;
}

.col-3 {
  width: 25%;
}

.col-4 {
  width: 33.33%;
}

.col-5 {
  width: 41.66%;
}

.col-6 {
  width: 50%;
}

.col-7 {
  width: 58.33%;
}

.col-8 {
  width: 66.66%;
}

.col-9 {
  width: 75%;
}

.col-10 {
  width: 83.33%;
}

.col-11 {
  width: 91.66%;
}

.col-12 {
  width: 100%;
}

html {
  font-family: Arial, Helvetica, sans-serif;
}

h2, h3 {
  text-align: center;
}

#title {
  text-align: center;
  position: relative;
  top: -15px;
  font-family: 'Lora', serif;
  font-size: 160%;
}

h2, h3 {
  margin-top: 0;
  margin-bottom: 0;
}

/* Disable spinner for item input */
input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.logo {
  position: relative;
  top: 18px;
  height: 50px;
  width: 50px;
}

.subHeader {
  margin-top: 10px;
  margin-bottom: 10px;
}

.greeting {
  text-align: center;
}

.greetingBreakline {
  display: none;
}

.checkboxes {
  margin-bottom: 5px;
}

.load {
  margin-top: 20px;
  margin-bottom: 10px;
}

ul {
  list-style-type: none;
  padding: 0;
}

li {
  margin-top: 5px;
}

.item {
  margin-top: 15px;
}

.saveOrderBtn {
  position: fixed;
  top: 0;
  right: 0;
  z-index: 4;
}

.clean-gray-btn {
  background-color: #eeeeee;
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #eeeeee), color-stop(100%, #cccccc));
  background-image: -webkit-linear-gradient(top, #eeeeee, #cccccc);
  background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
  background-image: -ms-linear-gradient(top, #eeeeee, #cccccc);
  background-image: -o-linear-gradient(top, #eeeeee, #cccccc);
  background-image: linear-gradient(top, #eeeeee, #cccccc);
  border: 1px solid #ccc;
  border-bottom: 1px solid #bbb;
  border-radius: 3px;
  color: #333;
  font: bold 11px/1 "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
  padding: 2px 5px;
  text-align: center;
  text-shadow: 0 1px 0 #eee;
  width: 150px;
  outline: none;
}

.clean-gray-btn:hover {
  background-color: #dddddd;
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #dddddd), color-stop(100%, #bbbbbb));
  background-image: -webkit-linear-gradient(top, #dddddd, #bbbbbb);
  background-image: -moz-linear-gradient(top, #dddddd, #bbbbbb);
  background-image: -ms-linear-gradient(top, #dddddd, #bbbbbb);
  background-image: -o-linear-gradient(top, #dddddd, #bbbbbb);
  background-image: linear-gradient(top, #dddddd, #bbbbbb);
  border: 1px solid #bbb;
  border-bottom: 1px solid #999;
  cursor: pointer;
  text-shadow: 0 1px 0 #ddd;
}

.clean-gray-btn:active {
  border: 1px solid #aaa;
  border-bottom: 1px solid #888;
  -webkit-box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee;
  box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee;
}

.clean-gray-btn-shop {
  font: bold 15px/1 "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
  width: 100%;
}

.clean-gray-btn-increment {
  width: 25px;
  height: 25px;
  margin-left: 5px;
}

.shopList {
  display: flex;
  flex-wrap: wrap;
  width: 80%;
  margin: 0 auto;
}

#orderForm {
  position: relative;
  left: 5%;
  width: 90%;
}

#loading {
  position: fixed;
  height: 100%;
  width: 100%;
  margin: 0 auto;
  background: url('loading.gif') no-repeat center center;
  z-index: 5;
}

table {
  border-collapse: collapse;
}

table, th, td {
    border: 1px solid black;
}

#print {
  font-size: 10px;
}

.center {
  text-align: center;
}

/* Log in menu classes */
.login-card {
  padding: 40px;
  width: 274px;
  background-color: #F7F7F7;
  margin: 0 auto 10px;
  border-radius: 2px;
  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
  overflow: hidden;
}

.login-card h1 {
  font-weight: 100;
  text-align: center;
  font-size: 2.3em;
}

.login-card input[type=submit] {
  width: 100%;
  display: block;
  margin-bottom: 10px;
  position: relative;
}

.login-card input[type=text], input[type=password], input[type=email] {
  height: 44px;
  font-size: 16px;
  width: 100%;
  margin-bottom: 10px;
  -webkit-appearance: none;
  background: #fff;
  border: 1px solid #d9d9d9;
  border-top: 1px solid #c0c0c0;
  /* border-radius: 2px; */
  padding: 0 8px;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
}

.login-card input[type=text]:hover, input[type=password]:hover {
  border: 1px solid #b9b9b9;
  border-top: 1px solid #a0a0a0;
  -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
  -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
}

.login {
  text-align: center;
  font-size: 14px;
  font-family: 'Arial', sans-serif;
  font-weight: 700;
  height: 36px;
  padding: 0 8px;
/* border-radius: 3px; */
/* -webkit-user-select: none;
  user-select: none; */
}

.login-submit {
  /* border: 1px solid #3079ed; */
  border: 0px;
  color: #fff;
  text-shadow: 0 1px rgba(0,0,0,0.1);
  background-color: #4d90fe;
  /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#4787ed)); */
}

.login-submit:hover {
  /* border: 1px solid #2f5bb7; */
  border: 0px;
  text-shadow: 0 1px rgba(0,0,0,0.3);
  background-color: #357ae8;
  /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#357ae8)); */
}

.login-card a {
  text-decoration: none;
  color: #666;
  font-weight: 400;
  text-align: center;
  display: inline-block;
  opacity: 0.6;
  transition: opacity ease 0.5s;
}

.login-card a:hover {
  opacity: 1;
}

/* Styling the side panel showing shopping cart */
#checkout {
  display: none;
  width: 20%;
  position: fixed;
  top: 0;
  right: 0;
  height: 100%;
}

#checkoutHeader {
  height: 60px;
}

#checkoutItems {
  overflow-y: auto;
}

.checkoutButtons {
  float: right;
  margin-top: 5px;
  margin-right: 10px;
  width: 20px;
  height: 20px;
  font-size: 10px;
}

/* Packing slip stylving */
#packingSlip {
  display: none;
  margin-left: 40px;
  margin-right: 40px;
}

.packingName {
  text-align: right;
}

.packingTitle {
  position: relative;
  top: -15px;
  font-family: 'Lora', serif;
  font-size: 160%;
}

.packingRow {
  margin-bottom: 20px;
}

.packingP {
  margin-top: 0;
  margin-bottom: 0;
}

.packingTable {
  width: 100%;
}

.packingSign {
  margin-top: 50px;
}

@media screen and (min-width: 1000px) {
  .clean-gray-btn-shop {
    width: 23.5%;
  }

  .greeting {
    display: inline;
    margin: 5px 0 0 5px;
    position: fixed;
    left: 0;
    top: 0;
    z-index: 5;
  }

  .greetingBreakline {
    display: inline;
  }

  #orderForm {
    left: 12.5%;
    width: 80%;
    margin: 0 auto;
  }

  #checkout {
    display: inline;
    z-index: 3;
  }
}

@media print {
  .no-print {
    display: none;
  }

  #packingSlip {
    display: inline;
  }

  #print {
    font-size: 10px;
  }

  .packingSlips {
    page-break-before: always;
  }
}

